--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,16 +1,3 @@
-.logo {
-  height: 2em;
-  padding: .5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.solid:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
 .card {
   padding: 2em;
 }
@@ -53,16 +40,20 @@
   transform-origin: bottom left;
 }
 
-.drop-zone {
+.main {
   width: 100%;
   border: 1px solid #888;
-  margin: 1em;
+  margin: 1em 1em 0 1em;
+  padding: 1em;
+}
+
+.drop-zone {
+  width: 100%;
   display: flex;
   height: 90vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 1em;
 }
 
 .back-ground {
