--- a/src/components/index.css
+++ b/src/components/index.css
@@ -4,9 +4,6 @@ html, body {
 
 body {
   margin: 0;
-  justify-content: center;
-  align-items: center;
-  display: flex;
   width: 100%;
 }
 
@@ -32,7 +29,7 @@ body {
 }
 
 .root {
-  min-height: 100%;
+  min-height: 50vh;
   width: 100%;
   display: flex;
   flex-direction: row;
