--- a/src/components/Lattice.css
+++ b/src/components/Lattice.css
@@ -1,5 +1,5 @@
 .box {
-    height: 100%;
+    height: 90vh;
     width: 100%;
 }
 
@@ -10,4 +10,5 @@ svg {
 
 .svg {
     width: 100%;
+    border: 1px solid beige;
 }
