--- a/src/components/index.css
+++ b/src/components/index.css
@@ -45,10 +45,9 @@ body {
 }
 
 .root {
-  min-height: 99vh;
   width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 h1 {
@@ -87,3 +86,32 @@ button:focus-visible {
 /*    background-color: #f9f9f9;*/
 /*  }*/
 /*}*/
+
+.row {
+  display: grid;
+  grid-auto-flow: column;
+  grid-column-gap: 10px;
+  margin-top: 1em;
+  align-items: center;
+}
+
+.row-middle {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.column {
+  display: flex;
+  flex-direction: column;
+}
+
+.card {
+  background: rgba(128, 128, 128, 0.3);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(128, 128, 128, 0.1);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  border: 1px solid #242424;
+  padding: 1em;
+}
