Add basic popup frame - add basic frame that pops up when hovering above a node - place the popup frame next to the mouse hover event (with a defined   offset - dismount the popup upon abondoning the mouse hover event

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -115,3 +115,9 @@ button:focus-visible {
   border: 1px solid #242424;
   padding: 1em;
 }
+
+.line {
+  width: 100%;
+  border-color: #242424;
+  background-color: #242424;
+}
