--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -7,3 +7,11 @@
 .main {
     align-items: unset;
 }
+
+.navigation {
+    position: absolute;
+    top: 1.5em;
+    right: 1.5em;
+    max-width: 30%;
+    min-width: 30%;
+}
