Improve dragging behavior ## Summary - improve the dragging behavior by using the SVG draggable plugin instead of the normal DOM mouse-events; move the node and its points of reference accordingly to the encapsulated mouse-event's position - fix some UI layout issues - cleanup some SVG creation blocks, so that no unnecessary container element is created

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -39,12 +39,10 @@
 
 .main {
   position: absolute;
-  top: 1em;
-  left: 1em;
-  right: 1em;
-  bottom: 1em;
-  border: 1px solid #888;
-  padding: 1em;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 .drop-zone {
