--- a/src/components/App.css
+++ b/src/components/App.css
@@ -46,17 +46,16 @@
 }
 
 .drop-zone {
+  background-image: url('../assets/graph.svg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   width: 100%;
   display: flex;
   height: 90vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-}
-
-.back-ground {
-  width: inherit;
-  height: inherit;
 }
 
 .reset-button {
