--- a/src/components/legend/legend.css
+++ b/src/components/legend/legend.css
@@ -2,5 +2,22 @@
     position: absolute;
     bottom: 1.5em;
     right: 1.5em;
-    max-width: 30%;
+    max-width: 25em;
+}
+
+.row {
+    margin: 0;
+    display: flex;
+    justify-content: space-between;
+}
+
+.hide {
+    cursor: pointer;
+}
+
+.show {
+    position: absolute;
+    cursor: pointer;
+    bottom: .5em;
+    right: .5em;
 }
