--- a/src/components/navigation/navigation.css
+++ b/src/components/navigation/navigation.css
@@ -12,6 +12,6 @@
     position: absolute;
     top: 1.5em;
     right: 1.5em;
-    max-width: 30%;
-    min-width: 30%;
+    max-width: 25em;
+    min-width: 25em;
 }
