--- a/src/components/App.css
+++ b/src/components/App.css
@@ -52,7 +52,7 @@
   background-position: center;
   width: 100%;
   display: flex;
-  height: 90vh;
+  height: 100%;
   flex-direction: column;
   justify-content: center;
   align-items: center;
