--- a/src/components/legend/legend.css
+++ b/src/components/legend/legend.css
@@ -5,6 +5,31 @@
     max-width: 25em;
 }
 
+.legend {
+    box-shadow: 0 0 0 0;
+    /*transform: scale(1);*/
+    animation: pulse 1s ease-in;
+}
+
+@keyframes pulse {
+    0% {
+        /*transform: scale(0.95);*/
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+    }
+
+    50% {
+        /*transform: scale(1);*/
+        box-shadow: 0 0 .5em .5em rgba(255, 255, 255, 0.7);
+    }
+
+    /*100% {*/
+    /*    !*transform: scale(0.95);*!*/
+    /*    box-shadow: 0 5px 5px 0 rgba(255, 255, 255, 0.7);*/
+    /*}*/
+}
+
+
+
 .row {
     margin: 0;
     display: flex;
