--- a/src/components/index.css
+++ b/src/components/index.css
@@ -97,12 +97,12 @@ button:focus-visible {
 }
 
 .card {
-  background: rgba(128, 128, 128, 0.3);
+  background: rgba(100, 100, 100, 0.3);
   border-radius: 16px;
   box-shadow: 0 4px 30px rgba(128, 128, 128, 0.1);
   backdrop-filter: blur(10px);
   -webkit-backdrop-filter: blur(10px);
-  border: 1px solid #242424;
+  border: 1px solid grey;
   padding: 1em;
 }
 
