--- a/src/components/tools/overlay.css
+++ b/src/components/tools/overlay.css
@@ -20,7 +20,7 @@
     position: absolute;
     right: .5em;
     top: .5em;
-    font-size: 4em;
+    font-size: 2em;
     z-index: 10;
 }
 
@@ -37,16 +37,15 @@
     bottom: 60%;
 }
 
-.empty-card {
+.buttons {
+    display: flex;
     position: absolute;
-    bottom: 1.5em;
-    right: 1.5em;
-    max-width: 25em;
-    min-width: 25em;
-    border-radius: 16px;
-    border: 2px solid white;
+    bottom: 1em;
+    left: 1em;
     z-index: 10;
-    padding: 1em;
-    min-height: 24em;
+}
+
+.buttons > *:not(:last-child) {
+    margin-right: 1em;
 }
 
