--- a/src/components/overlay/overlay.css
+++ b/src/components/overlay/overlay.css
@@ -6,13 +6,29 @@
     left: 0;
     right: 0;
     z-index: 9;
-    background: rgba(200, 200, 200, 0.1);
+    background: rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(2px);
     -webkit-backdrop-filter: blur(10px);
 
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.overlay-header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.description {
+    margin-top: 10em;
+    margin-right: 10em;
+    max-width: 40%;
+    position: absolute;
+    z-index: 10;
+    padding: 1em 2em 2em 2em;
 }
 
 .close {
@@ -49,3 +65,16 @@
     margin-right: 1em;
 }
 
+.help > *:not(:last-child) {
+    margin-bottom: 1em;
+}
+
+@keyframes pulse {
+    0% {
+        box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
+    }
+
+    50% {
+        box-shadow: 0 0 .5em .5em rgba(255, 255, 255, 0.7);
+    }
+}
