Cleanup highlights and add control ## Summary - only show the glowing highlight effect when the overlay is active - add context signal to control this flow - cleanup styling - add new control for enabling the dimension view

--- a/src/components/overlay/overlay.css
+++ b/src/components/overlay/overlay.css
@@ -69,6 +69,12 @@
     margin-bottom: 1em;
 }
 
+.highlight {
+    box-shadow: 0 0 0 0;
+    animation: pulse 1s ease-in;
+    z-index: 10;
+}
+
 @keyframes pulse {
     0% {
         box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.7);
