Apply the latest changes from the last study - update README to finalize the project - add more overlays with images for clearer content - adjust some default behavior - adjust icon size and add labels - fix stateless coordinate label bug - fix unsafe access bug

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -67,6 +67,8 @@
 }
 
 .tools {
+    display: flex;
+    flex-direction: row;
     position: absolute;
     right: .5em;
     top: .5em;
@@ -75,8 +77,4 @@
 
 .tools > *:not(:last-child) {
     margin-right: .5em;
-}
-
-.material-symbols-outlined {
-    cursor: pointer;
 }
