--- a/src/components/legend/legend.css
+++ b/src/components/legend/legend.css
@@ -17,9 +17,8 @@
     cursor: pointer;
 }
 
-.show {
+.legend-box {
     position: absolute;
-    cursor: pointer;
     bottom: .5em;
     right: .5em;
 }
